# devops-interview-assignment

./: .dockerignore  .env.example  .gitignore  Dockerfile  FEEDBACK.md  MY_README.md  Makefile  README.md  docker-compose.yml  pyproject.toml
deploy/: Chart.yaml  README.md  values.yaml
deploy/templates/: configmap.yaml  cronjob.yaml  rbac.yaml  serviceaccount.yaml
keycloak/: README.md  grant-service-account-roles.sh  realm-export.json  seed.sh
kind/: cluster.yaml  setup.sh
spi/: README.md
src/cleaner/: __init__.py  config.py  keycloak_client.py  main.py  policy.py
